added footer styles

--- a/index.html
+++ b/index.html
@@ -27,46 +27,60 @@
           <a href="/" class="link logo"
             >Web<span class="navigation__logo">Studio</span></a
           >
-          <button type="button" class="button menu__btn">
-            <svg width="40" height="40" class="icon">
-              <use src="images/symbol-defs.svg#menu"></use>
-              <use src="images/symbol-defs.svg#cross"></use>
+          <button
+            type="button"
+            class="button menu__btn"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg width="40" height="40" aria-label="Mobile menu switch">
+              <use
+                href="images/symbol-defs.svg#menu"
+                class="icon icon__menu"
+              ></use>
+              <use
+                href="images/symbol-defs.svg#cross"
+                class="icon icon__cross"
+              ></use>
             </svg>
           </button>
-          <ul class="site-nav">
-            <li class="site-nav__item">
-              <a
-                href="index.html"
-                class="link header__link header__link--current"
-                >Studio</a
-              >
-            </li>
-            <li class="site-nav__item">
-              <a href="portfolio.html" class="link header__link">Portfolio</a>
-            </li>
-            <li class="site-nav__item">
-              <a href="" class="link header__link">Contacts</a>
-            </li>
-          </ul>
+          <div class="menu__container" id="menu-container" data-menu>
+            <ul class="site-nav">
+              <li class="site-nav__item">
+                <a
+                  href="index.html"
+                  class="link header__link header__link--current"
+                  >Studio</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="portfolio.html" class="link header__link">Portfolio</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="" class="link header__link">Contacts</a>
+              </li>
+            </ul>
+            <ul class="contacts">
+              <li class="contacts__item">
+                <a href="mailto:info@devstudio.com" class="link contacts__link">
+                  <svg width="16" height="12" class="icon contacts__icon">
+                    <use href="images/symbol-defs.svg#envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts__item">
+                <a href="tel:+12127724150" class="link contacts__link">
+                  <svg width="10" height="16" class="icon contacts__icon">
+                    <use href="images/symbol-defs.svg#smartphone"></use>
+                  </svg>
+                  +1 212-772-4150</a
+                >
+              </li>
+            </ul>
+          </div>
         </nav>
-        <ul class="contacts">
-          <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" class="link contacts__link">
-              <svg width="16" height="12" class="icon contacts__icon">
-                <use href="images/symbol-defs.svg#envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts__item">
-            <a href="tel:+12127724150" class="link contacts__link">
-              <svg width="10" height="16" class="icon contacts__icon">
-                <use href="images/symbol-defs.svg#smartphone"></use>
-              </svg>
-              +1 212-772-4150</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
     <main>
@@ -201,7 +215,7 @@
           </ul>
         </div>
       </section>
-      <section class="section section--no-padding-top">
+      <section class="section section--no-padding-top works">
         <div class="container">
           <h2 class="title">What we do</h2>
           <ul class="works__list">
@@ -605,7 +619,8 @@
         </div>
       </div>
     </footer>
-    <script src="header.js"></script>
-    <script src="modal.js"></script>
+    <script src="js/header.js"></script>
+    <script src="js/mobile-menu.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
