added social list in menu-container

--- a/index.html
+++ b/index.html
@@ -79,6 +79,36 @@
                 >
               </li>
             </ul>
+            <ul class="social-menu">
+              <li class="social-menu__item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="link social-menu__link"
+                  >Instagram</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.twitter.com/"
+                  class="link social-menu__link"
+                  >Twitter</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="link social-menu__link"
+                  >Facebook</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="link social-menu__link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
           </div>
         </nav>
       </div>
