portfolio, fixed 767px issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,40 +27,90 @@
           <a href="/" class="link logo"
             >Web<span class="navigation__logo">Studio</span></a
           >
-          <ul class="site-nav">
-            <li class="site-nav__item">
-              <a href="index.html" class="link header__link">Studio</a>
-            </li>
-            <li class="site-nav__item">
-              <a
-                href="portfolio.html"
-                class="link header__link header__link--current"
-                >Portfolio</a
-              >
-            </li>
-            <li class="site-nav__item">
-              <a href="" class="link header__link">Contacts</a>
-            </li>
-          </ul>
+          <button
+            type="button"
+            class="button menu__btn"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg width="40" height="40" aria-label="Mobile menu switch">
+              <use
+                href="images/symbol-defs.svg#menu"
+                class="icon icon__menu"
+              ></use>
+              <use
+                href="images/symbol-defs.svg#cross"
+                class="icon icon__cross"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu__container" id="menu-container" data-menu>
+            <ul class="site-nav">
+              <li class="site-nav__item">
+                <a href="index.html" class="link header__link">Studio</a>
+              </li>
+              <li class="site-nav__item">
+                <a
+                  href="portfolio.html"
+                  class="link header__link header__link--current"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="" class="link header__link">Contacts</a>
+              </li>
+            </ul>
+            <ul class="contacts">
+              <li class="contacts__item">
+                <a href="mailto:info@devstudio.com" class="link contacts__link">
+                  <svg width="16" height="12" class="icon contacts__icon">
+                    <use href="images/symbol-defs.svg#envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="contacts__item">
+                <a href="tel:+12127724150" class="link contacts__link">
+                  <svg width="10" height="16" class="icon contacts__icon">
+                    <use href="images/symbol-defs.svg#smartphone"></use>
+                  </svg>
+                  +1 212-772-4150</a
+                >
+              </li>
+            </ul>
+            <ul class="social-menu">
+              <li class="social-menu__item">
+                <a
+                  href="https://www.instagram.com/"
+                  class="link social-menu__link"
+                  >Instagram</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.twitter.com/"
+                  class="link social-menu__link"
+                  >Twitter</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.facebook.com/"
+                  class="link social-menu__link"
+                  >Facebook</a
+                >
+              </li>
+              <li class="social-menu__item">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="link social-menu__link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
         </nav>
-        <ul class="contacts">
-          <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" class="link contacts__link">
-              <svg width="16" height="12" class="contacts__icon">
-                <use href="images/symbol-defs.svg#envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts__item">
-            <a href="tel:+12127724150" class="link contacts__link">
-              <svg width="10" height="16" class="contacts__icon">
-                <use href="images/symbol-defs.svg#smartphone"></use>
-              </svg>
-              +1 212-772-4150</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
 
@@ -312,7 +362,7 @@
                 href="https://www.instagram.com/"
                 class="link footer__social-link"
               >
-                <svg width="20" height="20" class="footer__icon">
+                <svg width="20" height="20" class="icon">
                   <use href="images/symbol-defs.svg#instagram"></use>
                 </svg>
               </a>
@@ -322,7 +372,7 @@
                 href="https://www.twitter.com/"
                 class="link footer__social-link"
               >
-                <svg width="20" height="20" class="footer__icon">
+                <svg width="20" height="20" class="icon">
                   <use href="images/symbol-defs.svg#twitter"></use>
                 </svg>
               </a>
@@ -332,7 +382,7 @@
                 href="https://www.facebook.com/"
                 class="link footer__social-link"
               >
-                <svg width="20" height="20" class="footer__icon">
+                <svg width="20" height="20" class="icon">
                   <use href="images/symbol-defs.svg#facebook"></use>
                 </svg>
               </a>
@@ -342,7 +392,7 @@
                 href="https://www.linkedin.com/"
                 class="link footer__social-link"
               >
-                <svg width="20" height="20" class="footer__icon">
+                <svg width="20" height="20" class="icon">
                   <use href="images/symbol-defs.svg#linkedin"></use>
                 </svg>
               </a>
@@ -374,5 +424,8 @@
         </div>
       </div>
     </footer>
+    <script src="js/header.js"></script>
+    <script src="js/mobile-menu.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
