--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@
             <li class="works__item">
               <div class="works__box">
                 <img
+                  srcset="
+                    images/close-up-image-programer-working-his-desk-office_1098-18707.jpg    1x,
+                    images/close-up-image-programer-working-his-desk-office_1098-18707@2x.jpg 2x
+                  "
                   src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
                   alt="Programmer working at a desk in the office"
                   width="370"
@@ -262,6 +266,10 @@
             <li class="works__item">
               <div class="works__box">
                 <img
+                  srcset="
+                    images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg    1x,
+                    images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713@2x.jpg 2x
+                  "
                   src="images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
                   alt="Web designers develop applications"
                   width="370"
@@ -272,6 +280,10 @@
             <li class="works__item">
               <div class="works__box">
                 <img
+                  srcset="
+                    images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg    1x,
+                    images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119@2x.jpg 2x
+                  "
                   src="images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
                   alt="Creative artist web designer with graphics tablet"
                   width="370"
@@ -287,11 +299,34 @@
           <h2 class="title">Our Team</h2>
           <ul class="team">
             <li class="team__item">
-              <img
-                src="images/product-designer-photo.jpg"
-                alt="Christopher Walker - Product Designer"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    images/product-designer-photo.jpg    1x,
+                    images/product-designer-photo@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    images/product-designer-tablet.jpg    1x,
+                    images/product-designer-tablet@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    images/frontend-developer-photo-mobile.jpg    1x,
+                    images/frontend-developer-photo-mobile@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="images/product-designer-photo.jpg"
+                  alt="Christopher Walker - Product Designer"
+                />
+              </picture>
+
               <div class="team__box">
                 <h3 class="team__title">Christopher Walker</h3>
                 <p class="team__text">Product Designer</p>
@@ -340,11 +375,34 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="images/frontend-developer-photo.jpg"
-                alt="Kylie Evans - Frontend Developer"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    images/frontend-developer-photo.jpg    1x,
+                    images/frontend-developer-photo@2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    images/frontend-developer-photo-tablet.jpg    1x,
+                    images/frontend-developer-photo-tablet@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    images/frontend-developer-photo-mobile.jpg    1x,
+                    images/frontend-developer-photo-mobile@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="images/frontend-developer-photo.jpg"
+                  alt="Kylie Evans - Frontend Developer"
+                />
+              </picture>
+
               <div class="team__box">
                 <h3 class="team__title">Kylie Evans</h3>
                 <p class="team__text">Frontend Developer</p>
@@ -393,11 +451,34 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="images/marketing-photo.jpg"
-                alt="Ryan Harris - Marketing"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    images/marketing-photo.jpg    1x,
+                    images/marketing-photo@2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    images/marketing-photo-tablet.jpg    1x,
+                    images/marketing-photo-tablet@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    images/marketing-photo-mobile.jpg    1x,
+                    images/marketing-photo-mobile@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="images/marketing-photo.jpg"
+                  alt="Ryan Harris - Marketing"
+                />
+              </picture>
+
               <div class="team__box">
                 <h3 class="team__title">Ryan Harris</h3>
                 <p class="team__text">Marketing</p>
@@ -446,11 +527,34 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                src="images/ui-designer-photo.jpg"
-                alt="Tyler Moore - UI Designer"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    images/ui-designer-photo.jpg    1x,
+                    images/ui-designer-photo@2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    images/ui-designer-photo-tablet.jpg    1x,
+                    images/ui-designer-photo-tablet@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    images/ui-designer-photo-mobile.jpg    1x,
+                    images/ui-designer-photo-mobile@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="images/ui-designer-photo.jpg"
+                  alt="Tyler Moore - UI Designer"
+                />
+              </picture>
+
               <div class="team__box">
                 <h3 class="team__title">Tyler Moore</h3>
                 <p class="team__text">UI Designer</p>
