--- a/portfolio.html
+++ b/portfolio.html
@@ -144,11 +144,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio1.jpg"
-                    alt="Technoduck"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio1.jpg    1x,
+                        ./images/portfolio1@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio1-tablet.jpg    1x,
+                        ./images/portfolio1-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio1-mobile.jpg    1x,
+                        ./images/portfolio1-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio1.jpg" alt="Technoduck" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -164,11 +184,34 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio2.jpg"
-                    alt="Poster New Orlean vs Golden Star"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio2.jpg    1x,
+                        ./images/portfolio2@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio2-tablet.jpg    1x,
+                        ./images/portfolio2-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio2-mobile.jpg    1x,
+                        ./images/portfolio2-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="images/portfolio2.jpg"
+                      alt="Poster New Orlean vs Golden Star"
+                    />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -186,11 +229,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio3.jpg"
-                    alt="Seafood Restaurant"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio3.jpg    1x,
+                        ./images/portfolio3@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio3-tablet.jpg    1x,
+                        ./images/portfolio3-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio3-mobile.jpg    1x,
+                        ./images/portfolio3-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio3.jpg" alt="Seafood Restaurant" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -206,11 +269,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio4.jpg"
-                    alt="Project Prime"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio4.jpg    1x,
+                        ./images/portfolio4@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio4-tablet.jpg    1x,
+                        ./images/portfolio4-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio4-mobile.jpg    1x,
+                        ./images/portfolio4-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio4.jpg" alt="Project Prime" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -226,11 +309,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio5.jpg"
-                    alt="Project Boxes"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio5.jpg    1x,
+                        ./images/portfolio5@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio5-tablet.jpg    1x,
+                        ./images/portfolio5-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio5-mobile.jpg    1x,
+                        ./images/portfolio5-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio5.jpg" alt="Project Boxes" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -246,11 +349,34 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio6.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio6.jpg    1x,
+                        ./images/portfolio6@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio6-tablet.jpg    1x,
+                        ./images/portfolio6-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio6-mobile.jpg    1x,
+                        ./images/portfolio6-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="images/portfolio6.jpg"
+                      alt="Inspiration has no Borders"
+                    />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -266,11 +392,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio-link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio7.jpg"
-                    alt="Limited Edition"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio7.jpg    1x,
+                        ./images/portfolio7@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio7-tablet.jpg    1x,
+                        ./images/portfolio7-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio7-mobile.jpg    1x,
+                        ./images/portfolio7-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio7.jpg" alt="Limited Edition" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -286,11 +432,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio8.jpg"
-                    alt="Project LAB"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio8.jpg    1x,
+                        ./images/portfolio8@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio8-tablet.jpg    1x,
+                        ./images/portfolio8-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio8-mobile.jpg    1x,
+                        ./images/portfolio8-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio8.jpg" alt="Project LAB" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
@@ -306,11 +472,31 @@
             <li class="portfolio__item">
               <a href="" class="link portfolio__link">
                 <div class="portfolio__overlay">
-                  <img
-                    src="images/portfolio9.jpg"
-                    alt="Growing Business"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio9.jpg    1x,
+                        ./images/portfolio9@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio9-tablet.jpg    1x,
+                        ./images/portfolio9-tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio9-mobile.jpg    1x,
+                        ./images/portfolio9-mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="images/portfolio9.jpg" alt="Growing Business" />
+                  </picture>
+
                   <p class="portfolio__overlay-text">
                     Technoduck is a state-of-the-art coronavirus distribution
                     platform. Companies use this platform for digital espionage
